# abseil-cpp

./: BUILD.gn  README.chromium  absl.gni  absl_hardening_test.cc  filenames.gni  generate_def_file.py  generate_filenames_gni.js  rename_annotations.sh  symbols_arm64_dbg.def  symbols_arm64_rel.def  symbols_x64.def  symbols_x64_dbg.def  symbols_x64_rel.def  symbols_x64_rel_asan.def  symbols_x86.def  symbols_x86_dbg.def  symbols_x86_rel.def
absl/algorithm/: BUILD.gn
absl/base/: BUILD.gn  dynamic_annotations.cc  dynamic_annotations.h  thread_annotations.h
absl/base/internal/: raw_logging.h
absl/container/: BUILD.gn  fixed_array.h
absl/debugging/: BUILD.gn
absl/debugging/internal/: vdso_support.cc
absl/flags/: BUILD.gn
absl/functional/: BUILD.gn
absl/hash/: BUILD.gn
absl/memory/: BUILD.gn
absl/meta/: BUILD.gn
absl/random/: BUILD.gn
absl/random/internal/: BUILD.gn
absl/status/: BUILD.gn
absl/strings/: BUILD.gn  str_split_test.cc  string_view_test.cc
absl/synchronization/: BUILD.gn  mutex.cc
absl/time/: BUILD.gn  format.cc
absl/time/internal/cctz/: BUILD.gn
absl/time/internal/cctz/src/: cctz_benchmark.cc  time_zone_fixed.cc  time_zone_format.cc  time_zone_info.cc  time_zone_libc.cc  time_zone_lookup.cc
absl/types/: BUILD.gn
patches/: 0002-deterministic-logging-invocation.patch
