absl_inc_files = [
  "absl/base/internal/spinlock_akaros.inc",
  "absl/base/internal/spinlock_linux.inc",
  "absl/base/internal/spinlock_posix.inc",
  "absl/base/internal/spinlock_win32.inc",
  "absl/debugging/internal/stacktrace_aarch64-inl.inc",
  "absl/debugging/internal/stacktrace_arm-inl.inc",
  "absl/debugging/internal/stacktrace_emscripten-inl.inc",
  "absl/debugging/internal/stacktrace_generic-inl.inc",
  "absl/debugging/internal/stacktrace_powerpc-inl.inc",
  "absl/debugging/internal/stacktrace_unimplemented-inl.inc",
  "absl/debugging/internal/stacktrace_win32-inl.inc",
  "absl/debugging/internal/stacktrace_x86-inl.inc",
  "absl/debugging/symbolize_darwin.inc",
  "absl/debugging/symbolize_elf.inc",
  "absl/debugging/symbolize_emscripten.inc",
  "absl/debugging/symbolize_unimplemented.inc",
  "absl/debugging/symbolize_win32.inc",
  "absl/numeric/int128_have_intrinsic.inc",
  "absl/numeric/int128_no_intrinsic.inc",
  "absl/time/internal/get_current_time_chrono.inc",
  "absl/time/internal/get_current_time_posix.inc",
  "absl/time/internal/zoneinfo.inc",
]

absl_internals = [
  "absl/base/internal/atomic_hook.h",
  "absl/base/internal/cycleclock.cc",
  "absl/base/internal/cycleclock.h",
  "absl/base/internal/direct_mmap.h",
  "absl/base/internal/endian.h",
  "absl/base/internal/errno_saver.h",
  "absl/base/internal/exponential_biased.cc",
  "absl/base/internal/exponential_biased.h",
  "absl/base/internal/fast_type_id.h",
  "absl/base/internal/hide_ptr.h",
  "absl/base/internal/identity.h",
  "absl/base/internal/inline_variable.h",
  "absl/base/internal/invoke.h",
  "absl/base/internal/low_level_alloc.cc",
  "absl/base/internal/low_level_alloc.h",
  "absl/base/internal/low_level_scheduling.h",
  "absl/base/internal/per_thread_tls.h",
  "absl/base/internal/periodic_sampler.cc",
  "absl/base/internal/periodic_sampler.h",
  "absl/base/internal/pretty_function.h",
  "absl/base/internal/raw_logging.cc",
  "absl/base/internal/raw_logging.h",
  "absl/base/internal/scheduling_mode.h",
  "absl/base/internal/scoped_set_env.cc",
  "absl/base/internal/scoped_set_env.h",
  "absl/base/internal/spinlock.cc",
  "absl/base/internal/spinlock.h",
  "absl/base/internal/spinlock_wait.cc",
  "absl/base/internal/spinlock_wait.h",
  "absl/base/internal/strerror.cc",
  "absl/base/internal/strerror.h",
  "absl/base/internal/sysinfo.cc",
  "absl/base/internal/sysinfo.h",
  "absl/base/internal/thread_identity.cc",
  "absl/base/internal/thread_identity.h",
  "absl/base/internal/throw_delegate.cc",
  "absl/base/internal/throw_delegate.h",
  "absl/base/internal/tsan_mutex_interface.h",
  "absl/base/internal/unaligned_access.h",
  "absl/base/internal/unscaledcycleclock.cc",
  "absl/base/internal/unscaledcycleclock.h",
  "absl/cleanup/internal/cleanup.h",
  "absl/container/internal/btree.h",
  "absl/container/internal/btree_container.h",
  "absl/container/internal/common.h",
  "absl/container/internal/compressed_tuple.h",
  "absl/container/internal/container_memory.h",
  "absl/container/internal/counting_allocator.h",
  "absl/container/internal/hash_function_defaults.h",
  "absl/container/internal/hash_policy_traits.h",
  "absl/container/internal/hashtable_debug.h",
  "absl/container/internal/hashtable_debug_hooks.h",
  "absl/container/internal/hashtablez_sampler.cc",
  "absl/container/internal/hashtablez_sampler.h",
  "absl/container/internal/hashtablez_sampler_force_weak_definition.cc",
  "absl/container/internal/have_sse.h",
  "absl/container/internal/inlined_vector.h",
  "absl/container/internal/layout.h",
  "absl/container/internal/node_hash_policy.h",
  "absl/container/internal/raw_hash_map.h",
  "absl/container/internal/raw_hash_set.cc",
  "absl/container/internal/raw_hash_set.h",
  "absl/container/internal/tracked.h",
  "absl/debugging/internal/address_is_readable.cc",
  "absl/debugging/internal/address_is_readable.h",
  "absl/debugging/internal/demangle.cc",
  "absl/debugging/internal/demangle.h",
  "absl/debugging/internal/elf_mem_image.cc",
  "absl/debugging/internal/elf_mem_image.h",
  "absl/debugging/internal/examine_stack.cc",
  "absl/debugging/internal/examine_stack.h",
  "absl/debugging/internal/stack_consumption.cc",
  "absl/debugging/internal/stack_consumption.h",
  "absl/debugging/internal/stacktrace_config.h",
  "absl/debugging/internal/symbolize.h",
  "absl/debugging/internal/vdso_support.cc",
  "absl/debugging/internal/vdso_support.h",
  "absl/flags/internal/commandlineflag.cc",
  "absl/flags/internal/commandlineflag.h",
  "absl/flags/internal/flag.cc",
  "absl/flags/internal/flag.h",
  "absl/flags/internal/parse.h",
  "absl/flags/internal/path_util.h",
  "absl/flags/internal/private_handle_accessor.cc",
  "absl/flags/internal/private_handle_accessor.h",
  "absl/flags/internal/program_name.cc",
  "absl/flags/internal/program_name.h",
  "absl/flags/internal/registry.h",
  "absl/flags/internal/sequence_lock.h",
  "absl/flags/internal/usage.cc",
  "absl/flags/internal/usage.h",
  "absl/functional/internal/front_binder.h",
  "absl/functional/internal/function_ref.h",
  "absl/hash/internal/city.cc",
  "absl/hash/internal/city.h",
  "absl/hash/internal/hash.cc",
  "absl/hash/internal/hash.h",
  "absl/hash/internal/spy_hash_state.h",
  "absl/hash/internal/wyhash.cc",
  "absl/hash/internal/wyhash.h",
  "absl/numeric/internal/bits.h",
  "absl/numeric/internal/representation.h",
  "absl/status/internal/status_internal.h",
  "absl/status/internal/statusor_internal.h",
  "absl/strings/internal/char_map.h",
  "absl/strings/internal/charconv_bigint.cc",
  "absl/strings/internal/charconv_bigint.h",
  "absl/strings/internal/charconv_parse.cc",
  "absl/strings/internal/charconv_parse.h",
  "absl/strings/internal/cord_internal.cc",
  "absl/strings/internal/cord_internal.h",
  "absl/strings/internal/cord_rep_btree.cc",
  "absl/strings/internal/cord_rep_btree.h",
  "absl/strings/internal/cord_rep_btree_navigator.cc",
  "absl/strings/internal/cord_rep_btree_navigator.h",
  "absl/strings/internal/cord_rep_btree_reader.cc",
  "absl/strings/internal/cord_rep_btree_reader.h",
  "absl/strings/internal/cord_rep_consume.cc",
  "absl/strings/internal/cord_rep_consume.h",
  "absl/strings/internal/cord_rep_flat.h",
  "absl/strings/internal/cord_rep_ring.cc",
  "absl/strings/internal/cord_rep_ring.h",
  "absl/strings/internal/cord_rep_ring_reader.h",
  "absl/strings/internal/cordz_functions.cc",
  "absl/strings/internal/cordz_functions.h",
  "absl/strings/internal/cordz_handle.cc",
  "absl/strings/internal/cordz_handle.h",
  "absl/strings/internal/cordz_info.cc",
  "absl/strings/internal/cordz_info.h",
  "absl/strings/internal/cordz_sample_token.cc",
  "absl/strings/internal/cordz_sample_token.h",
  "absl/strings/internal/cordz_statistics.h",
  "absl/strings/internal/cordz_update_scope.h",
  "absl/strings/internal/cordz_update_tracker.h",
  "absl/strings/internal/escaping.cc",
  "absl/strings/internal/escaping.h",
  "absl/strings/internal/memutil.cc",
  "absl/strings/internal/memutil.h",
  "absl/strings/internal/ostringstream.cc",
  "absl/strings/internal/ostringstream.h",
  "absl/strings/internal/pow10_helper.cc",
  "absl/strings/internal/pow10_helper.h",
  "absl/strings/internal/resize_uninitialized.h",
  "absl/strings/internal/stl_type_traits.h",
  "absl/strings/internal/str_format/arg.cc",
  "absl/strings/internal/str_format/arg.h",
  "absl/strings/internal/str_format/bind.cc",
  "absl/strings/internal/str_format/bind.h",
  "absl/strings/internal/str_format/checker.h",
  "absl/strings/internal/str_format/extension.cc",
  "absl/strings/internal/str_format/extension.h",
  "absl/strings/internal/str_format/float_conversion.cc",
  "absl/strings/internal/str_format/float_conversion.h",
  "absl/strings/internal/str_format/output.cc",
  "absl/strings/internal/str_format/output.h",
  "absl/strings/internal/str_format/parser.cc",
  "absl/strings/internal/str_format/parser.h",
  "absl/strings/internal/str_join_internal.h",
  "absl/strings/internal/str_split_internal.h",
  "absl/strings/internal/string_constant.h",
  "absl/strings/internal/utf8.cc",
  "absl/strings/internal/utf8.h",
  "absl/synchronization/internal/create_thread_identity.cc",
  "absl/synchronization/internal/create_thread_identity.h",
  "absl/synchronization/internal/futex.h",
  "absl/synchronization/internal/graphcycles.cc",
  "absl/synchronization/internal/graphcycles.h",
  "absl/synchronization/internal/kernel_timeout.h",
  "absl/synchronization/internal/per_thread_sem.cc",
  "absl/synchronization/internal/per_thread_sem.h",
  "absl/synchronization/internal/thread_pool.h",
  "absl/synchronization/internal/waiter.cc",
  "absl/synchronization/internal/waiter.h",
  "absl/time/internal/cctz/include/cctz/civil_time.h",
  "absl/time/internal/cctz/include/cctz/civil_time_detail.h",
  "absl/time/internal/cctz/include/cctz/time_zone.h",
  "absl/time/internal/cctz/include/cctz/zone_info_source.h",
  "absl/time/internal/cctz/src/civil_time_detail.cc",
  "absl/time/internal/cctz/src/time_zone_fixed.cc",
  "absl/time/internal/cctz/src/time_zone_fixed.h",
  "absl/time/internal/cctz/src/time_zone_format.cc",
  "absl/time/internal/cctz/src/time_zone_if.cc",
  "absl/time/internal/cctz/src/time_zone_if.h",
  "absl/time/internal/cctz/src/time_zone_impl.cc",
  "absl/time/internal/cctz/src/time_zone_impl.h",
  "absl/time/internal/cctz/src/time_zone_info.cc",
  "absl/time/internal/cctz/src/time_zone_info.h",
  "absl/time/internal/cctz/src/time_zone_libc.cc",
  "absl/time/internal/cctz/src/time_zone_libc.h",
  "absl/time/internal/cctz/src/time_zone_lookup.cc",
  "absl/time/internal/cctz/src/time_zone_posix.cc",
  "absl/time/internal/cctz/src/time_zone_posix.h",
  "absl/time/internal/cctz/src/tzfile.h",
  "absl/time/internal/cctz/src/zone_info_source.cc",
  "absl/types/internal/conformance_aliases.h",
  "absl/types/internal/conformance_archetype.h",
  "absl/types/internal/conformance_profile.h",
  "absl/types/internal/optional.h",
  "absl/types/internal/parentheses.h",
  "absl/types/internal/span.h",
  "absl/types/internal/transform_args.h",
  "absl/types/internal/variant.h",
]

absl_externals = [
  "absl/algorithm/algorithm.h",
  "absl/algorithm/container.h",
  "absl/base/attributes.h",
  "absl/base/call_once.h",
  "absl/base/casts.h",
  "absl/base/config.h",
  "absl/base/const_init.h",
  "absl/base/dynamic_annotations.h",
  "absl/base/log_severity.cc",
  "absl/base/log_severity.h",
  "absl/base/macros.h",
  "absl/base/optimization.h",
  "absl/base/options.h",
  "absl/base/policy_checks.h",
  "absl/base/port.h",
  "absl/base/thread_annotations.h",
  "absl/cleanup/cleanup.h",
  "absl/container/btree_map.h",
  "absl/container/btree_set.h",
  "absl/container/fixed_array.h",
  "absl/container/flat_hash_map.h",
  "absl/container/flat_hash_set.h",
  "absl/container/inlined_vector.h",
  "absl/container/node_hash_map.h",
  "absl/container/node_hash_set.h",
  "absl/debugging/failure_signal_handler.cc",
  "absl/debugging/failure_signal_handler.h",
  "absl/debugging/leak_check.cc",
  "absl/debugging/leak_check.h",
  "absl/debugging/leak_check_disable.cc",
  "absl/debugging/stacktrace.cc",
  "absl/debugging/stacktrace.h",
  "absl/debugging/symbolize.cc",
  "absl/debugging/symbolize.h",
  "absl/flags/commandlineflag.cc",
  "absl/flags/commandlineflag.h",
  "absl/flags/config.h",
  "absl/flags/declare.h",
  "absl/flags/flag.cc",
  "absl/flags/flag.h",
  "absl/flags/marshalling.cc",
  "absl/flags/marshalling.h",
  "absl/flags/parse.cc",
  "absl/flags/parse.h",
  "absl/flags/reflection.cc",
  "absl/flags/reflection.h",
  "absl/flags/usage.cc",
  "absl/flags/usage.h",
  "absl/flags/usage_config.cc",
  "absl/flags/usage_config.h",
  "absl/functional/bind_front.h",
  "absl/functional/function_ref.h",
  "absl/hash/hash.h",
  "absl/memory/memory.h",
  "absl/meta/type_traits.h",
  "absl/numeric/bits.h",
  "absl/numeric/int128.cc",
  "absl/numeric/int128.h",
  "absl/status/status.cc",
  "absl/status/status.h",
  "absl/status/status_payload_printer.cc",
  "absl/status/status_payload_printer.h",
  "absl/status/statusor.cc",
  "absl/status/statusor.h",
  "absl/strings/ascii.cc",
  "absl/strings/ascii.h",
  "absl/strings/charconv.cc",
  "absl/strings/charconv.h",
  "absl/strings/cord.cc",
  "absl/strings/cord.h",
  "absl/strings/escaping.cc",
  "absl/strings/escaping.h",
  "absl/strings/match.cc",
  "absl/strings/match.h",
  "absl/strings/numbers.cc",
  "absl/strings/numbers.h",
  "absl/strings/str_cat.cc",
  "absl/strings/str_cat.h",
  "absl/strings/str_format.h",
  "absl/strings/str_join.h",
  "absl/strings/str_replace.cc",
  "absl/strings/str_replace.h",
  "absl/strings/str_split.cc",
  "absl/strings/str_split.h",
  "absl/strings/string_view.cc",
  "absl/strings/string_view.h",
  "absl/strings/strip.h",
  "absl/strings/substitute.cc",
  "absl/strings/substitute.h",
  "absl/synchronization/barrier.cc",
  "absl/synchronization/barrier.h",
  "absl/synchronization/blocking_counter.cc",
  "absl/synchronization/blocking_counter.h",
  "absl/synchronization/mutex.cc",
  "absl/synchronization/mutex.h",
  "absl/synchronization/notification.cc",
  "absl/synchronization/notification.h",
  "absl/time/civil_time.cc",
  "absl/time/civil_time.h",
  "absl/time/clock.cc",
  "absl/time/clock.h",
  "absl/time/duration.cc",
  "absl/time/format.cc",
  "absl/time/time.cc",
  "absl/time/time.h",
  "absl/types/any.h",
  "absl/types/bad_any_cast.h",
  "absl/types/bad_optional_access.cc",
  "absl/types/bad_optional_access.h",
  "absl/types/bad_variant_access.cc",
  "absl/types/bad_variant_access.h",
  "absl/types/compare.h",
  "absl/types/optional.h",
  "absl/types/span.h",
  "absl/types/variant.h",
  "absl/utility/utility.h",
]
